differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr79568-2.c-4.8.2-0.out.txt
pr79568-2.c: In function ‘bar’:
pr79568-2.c:17:27: error: ‘__builtin_ia32_lwpval64’ needs isa option -m32 -mlwp
   __builtin_ia32_lwpval64 (x, y, 1);   
                           ^
